<resources>
    <string name="app_name">Camera and Gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tizimga_kirish">Tizimga kirish</string>
    <string name="parol">Parol</string>
    <string name="telefon_raqam">Telefon raqam</string>
    <string name="version">version 1.0</string>
    <string name="ism_familiya">Ism, familiya</string>
    <string name="manzil">Manzil</string>
    <string name="fazliddin_toshpulatov">Fazliddin Toshpulatov</string>

    <style name="BottomSheet" parent="@style/Widget.Design.BottomSheet.Modal">
        <item name="android:background">@drawable/bg_bottom_sheet_dialog_fragment</item>
    </style>

    <style name="BaseBottomSheetDialog" parent="@style/Theme.Design.Light.BottomSheetDialog">
        <item name="android:windowIsFloating">false</item>
        <item name="bottomSheetStyle">@style/BottomSheet</item>
    </style>

    <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog" />

</resources>